# lyrify

./: .gitignore  Cargo.toml  README.md  config.json
src/: authorizer.rs  clients.rs  main.rs  response.rs  text.rs
src/authorizer/: genius_auth.rs  mod.rs  spotify_auth.rs
src/response/: genius_response.rs  mod.rs  spotify_response.rs
