[package]
name = "lyrify"
version = "0.1.0"
authors = ["arian <counterstrike1337@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.4",features = ["blocking", "json"]}
tokio = { version = "1.9.0", features = ["full"] }
open = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }