[package]
name = "lyrify"
version = "0.1.0"
authors = ["arian <counterstrike1337@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug=[]

[dependencies]
reqwest = {version="0.11.4",features = ["blocking", "json","cookies"]}
tokio = { version = "1.10.1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
open = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
soup = "0.5.1"
base64 = "0.13.0"
html5ever = "*"

